// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DescriptionWidget renders a description view widget component 1`] = `
<p
  className="metadata description widget documentDescription"
>
  Foo bar
</p>
`;

exports[`DescriptionWidget renders a description view widget component with children 1`] = `
<p
  className="metadata description widget documentDescription"
>
  <strong>
    Foo bar
  </strong>
</p>
`;

exports[`DescriptionWidget renders an empty description view widget component 1`] = `null`;
